--- a/clean-cache-control/package.json
+++ b/clean-cache-control/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.2",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
-  }
+  },
+  "dependencies": {}
 }
